# omnix

./: .env.development  .gitignore  0  AGENTS.md  AUDIT_REPORT.md  CEO_PLAYBOOK.md  LICENSE  MODULE_WORKFLOWS.md  OMNIX_AUDIT.md  OMNIX_PRODUCT_REPORT.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.circleci/: README.md  config.yml
.claude/: mcp.json
.commandcode/taste/: taste.md
.github/workflows/: backfill-releases.yml  build.yml  ci.yml  create-admin.yml  db-bootstrap.yml  (+9 more)
docs/: ADD_A_MODULE.md  AI_ROADMAP.md  CI_SECRETS.md  CLEANUP_PLAN.md  MCPS.md  MODULES.md  PAYMENTS_AND_SEO_PLAN.md  PAYMENT_TEST_RUNBOOK.md  PLAN.md  ROADMAP.md  UI_DENSITY_PLAN.md  UI_GUIDE.md  V1_COMPREHENSIVE_PLAN.md  V1_RELEASE_PLAN.md  VERCEL_DEPLOY.md  WEBSITE_REDESIGN_PLAN.md  architecture-decisions.md  core-modules.md  git-credential-pin.md  phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-05b-accounting.md  phase-06.md  phase-06b-etims.md  phase-06c-insurance.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  pricing-and-business.md  skills-and-mcps.md  ui-design-reference.md
keys/: README.md  license-public.pem  updater.key.pub
scripts/: add-back-buttons.mjs  audit-codebase.mjs  audit-date-filters.mjs  audit-drilldowns.mjs  audit-duplicate-tables.mjs  audit-full-width-back.mjs  audit-hardcoded-themes.mjs  audit-list-pages.mjs  audit-routes.mjs  backfill-releases.sh  build-installer-images.mjs  codemod-native-checkbox.py  codemod-native-select.py  fix-centered-back.mjs  fix-double-back.mjs  generate-license.mjs  md-to-pdf.mjs  preview-ai-workspace.mjs  preview-customer-display.mjs  preview-home.mjs  preview-illustrations.mjs  preview-mobile-menu.mjs  preview-module-kit.mjs  preview-payment-brands.mjs  preview-payment-modal.mjs  preview-scenes.mjs  preview-team-page.mjs  preview-touch-keyboard.mjs  preview-web-pages.mjs  preview-whatsapp-fab.mjs  preview-whatsapp.mjs  regen-variant-icons.mjs  seed-marketing-images.mjs  seed-r2-images.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dawa.conf.json  tauri.hardware.conf.json  tauri.hospitality.conf.json  tauri.retail.conf.json  tauri.salon.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_core.sql  002_inventory.sql  003_sales.sql  004_pharmacy.sql  005_accounting.sql  006_payments.sql  007_etims.sql  008_insurance.sql  009_license.sql  010_interactions.sql  011_network.sql  012_erp_extensions.sql  013_payments_settlement.sql  014_pharmacy_extensions.sql  015_trial_mode.sql  016_branches.sql  017_hr.sql  018_invoicing.sql  019_banking.sql  020_pharmacy_compliance.sql  021_retail.sql  022_recurring_invoices.sql  023_cold_chain.sql  024_tips.sql  025_product_uoms.sql  026_payment_provider_extensions.sql  027_license_entitlements.sql  028_trial_module.sql  029_rbac.sql  030_audit_log.sql  031_hardware.sql  032_hospitality_core.sql  033_hospitality_orders.sql  034_hospitality_service_charge.sql  035_hospitality_rooms.sql  036_hospitality_folios.sql  037_hospitality_recipes.sql  038_sales_service_charge.sql  039_module_sale_bridge.sql  040_menu_kind.sql  (+57 more)
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  backup.rs  cloud_backup.rs  inventory.rs  license.rs  mod.rs  network.rs  peripherals.rs  service.rs
src-tauri/src/db/: mod.rs
src-tauri/src/license/: mod.rs
src-tauri/src/network/: mod.rs
src-tauri/src/telemetry/: consent.rs  dispatcher.rs  event.rs  heartbeat.rs  mod.rs  store.rs  transport.rs
tests/: _marketing-samples.spec.ts  accounting-cogs-regression.spec.ts  ai-actions.spec.ts  audit-view.spec.ts  auto-cloud-backup.spec.ts  back-button.spec.tsx  background-jobs.spec.ts  business-profile.spec.ts  capabilities-v53.spec.ts  cogs.spec.ts  correctness-fixes.spec.ts  csv-automap.spec.ts  db-maintenance.spec.ts  detail-primitives.spec.tsx  equipment-v50.spec.ts  fefo.spec.ts  gl.spec.ts  hardware-v45.spec.ts  hardware.spec.ts  hospitality-display.spec.ts  hospitality-v43.spec.ts  hospitality-v44.spec.ts  insights.spec.ts  inventory-sales-schema.spec.ts  license-compact-key.spec.ts  license-service.spec.ts  medium-batch.spec.ts  money-hero.spec.ts  multi-license.spec.ts  notifications.spec.ts  pagination.spec.ts  payment-modal-helpers.spec.ts  payment-split.spec.ts  payment-tenders.spec.ts  payments-daraja.spec.ts  payments-paystack.spec.ts  pdf-golden.spec.ts  pharmacy-v46.spec.ts  pharmacy-v47.spec.ts  phone.spec.ts  (+20 more)
website/: .env.example  DUKA-BRIEF.md  README.md  REBUILD-COMPLETE.md  components.json  drizzle.config.ts  eslint.config.mjs  lighthouserc.json  next.config.ts  package-lock.json  package.json  plan-template.md  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  vercel.json  vitest.config.mts  vitest.setup.ts
(+1191 files in other folders)
