[package]
name = "sokoos"
version = "0.1.0"
description = "SokoOS — The operating system for your business"
authors = ["SokoOS"]
edition = "2021"

[lib]
name = "sokoos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
thiserror = "2"
anyhow = "1"

# Licensing
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
sysinfo = "0.32"
machine-uid = "0.5"

# Auto-updater
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# LAN multi-device
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
mdns-sd = "0.13"
local-ip-address = "0.6"
parking_lot = "0.12"

