[package]
name = "omnix"
version = "0.2.9"
description = "Omnix — The desktop ERP for Kenyan businesses"
authors = ["Omnix"]
edition = "2021"

[lib]
name = "omnix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
thiserror = "2"
anyhow = "1"
log = "0.4"

# Telemetry
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
once_cell = "1"
dirs = "5"

# Licensing
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
sysinfo = "0.32"
machine-uid = "0.5"

# Auto-updater
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Auto-start on system boot (Windows/macOS/Linux)
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"

# LAN multi-device
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
mdns-sd = "0.13"
local-ip-address = "0.6"
parking_lot = "0.12"

